# simplEr

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json  install.md  run  simplER.cpp  simplER_ref.cpp  vcpkg-configuration.json  vcpkg.json
deprecated/: Makefile
deprecated/include/: photon.h  util.h
deprecated/mfiles/: obj_grad.m
deprecated/src/: photon.cpp  scene.cpp
helperScripts/: compile.sh  computeFocusVoltage.m  computePeakPhotonsPerVoltage.m  frequencyScript.m  lengthScript.m  mergeMultipleRenderings.cpp  pfmwrite.m  readpfm.m  readpfm3d.m  runs.py  voltageScript.m
renderer/: CMakeLists.txt  Makefile  boost.mk  ceres.mk  ceres_aws.mk  gcc.mk  knownProblems.txt  matlab.mk
renderer/images/: ABCD.pfm  CMU_36.pfm  CMU_Small.pfm  Disk_501.pfm  GaussianFilterFWHM100um_6sigma253um.pfm  White.pfm  gaussianImage.m  slantedImage.m
renderer/include/: area_source.h  area_textured_source.h  block.h  bsdf.h  camera.h  constants.h  cudaRenderer.h  cuda_image.cuh  cuda_renderer.cuh  cuda_renderer.h  cuda_scene.cuh  cuda_utils.cuh  cuda_vector.cuh  debug_util.h  image.h  json_helper.h  json_parser.h  lens.h  matrix.h  medium.h  mex_wrapper.h  phase.h  photon.h  pmf.h  render_settings_parser.h  renderer.h  rif.h  rif_analytical.h  rif_base.h  rif_interpolated.h  rif_sources.h  rng_boost.h  rng_sse.h  sampler.h  scene.h  settings_parser.h  spline.h  sse.h  tvector.h  util.h  (+2 more)
renderer/mexfiles/: renderDerivImage_mex.cpp  renderImage2d_mex.cpp  renderImage3d_mex.cpp
renderer/mfiles/: caller.m  caller2d.m  caller3d.m  checkDeriv.m  renderDerivImage2d.m  renderDerivImageWeight.m  renderImage.m  renderImage2d.m  renderImage3d.m  rendererparams.m  scene2dparams.m  scene3dparams.m
renderer/pybindFiles/: Makefile  image_pybind.cpp  medium_pybind.cpp  phase_pybind.cpp  photon_pybind.cpp  scene_pybind.cpp  tvector_pybind.cpp
renderer/pybindFiles/tests/: FUS_configurations.ipynb  cylindricalUS.ipynb  cylindrical_us.txt  renderer3d_sample_input.txt  test_renderer3d_sample.py  wrapSrinivasData.py
renderer/samples/: renderer2d_sample  renderer3d_sample.cpp  spline_tests.cpp  testUS.cpp
renderer/src/: area_source.cpp  area_textured_source.cpp  block.cpp  bsdf.cpp  camera.cpp  cudaRenderer.cu  cuda_renderer.cu  cuda_scene.cu  cuda_vector.cu  image.cpp  lens.cpp  matrix.cpp  phase.cpp  photon.cpp  render_settings_parser.cpp  rng_sse.cpp  sampler.cpp  scene.cpp  settings_parser.cpp  vmf.cpp  warp.cpp
renderer2d/: Makefile
renderer2d/include/: bsdf.h  image.h  photon.h  scene.h  tvector.h  util.h
renderer2d/mexfiles/: renderDerivImage2d_mex.mexa64  renderDerivImageWeight2d_mex.cpp  renderDerivImageWeight2d_mex.mexa64  renderImage2d_mex.cpp  renderImage2d_mex.mexa64  test_fp2d_mex.mexa64
renderer2d/mfiles/: checkDeriv.m  rendererparams.m  sceneparams.m
renderer2d/samples/: renderer2d_sample
renderer2d/src/: bsdf.cpp  phase.cpp  photon.cpp  scene.cpp
renderings/: besselriffile.vol  fus_hifu_rif.sh  runs.py  runs_imaging.py  testing.sh  testing_splines.sh
renderings/settings/: fus.json
splinepractice/: Spline.m  Spline_inefficient.m  coefficients3d.csv  drawOpenCurve.m  interpolate1d.csv  interpolate2d.csv  interpolate3d.csv  kernel.csv  splinePractice1d.m  splinePractice2d.m  splinePractice3d.m  testCPPCode.m
splinepractice/delete/: D2value1dspline.m  Dvalue1dspline.m  build1dspline.m  spline (Case Conflict).m  spline.m  splineD.m  splineD2.m  value1dspline.m
splinepractice/inefficientVersion(array versions)/: splinePractice1d.m  splinePractice2d.m  splinePractice3d.m
